# anything-api

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PROJECT_STRUCTURE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-production.sh  tsconfig.base.json  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  sdk-publish.yml
apps/api/: Dockerfile  package.json
apps/api/src/: server.ts
apps/api/src/middleware/: auth.ts  metering.ts
apps/api/src/routes/: auth.ts  health.ts  runs.ts  schedules.ts  studio.ts  templates.ts  workflows.ts
apps/mcp-server/: README.md  package.json
apps/mcp-server/src/: index.ts
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/(auth)/: layout.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/(legal)/: layout.tsx
apps/web/components/: auth-guard.tsx  github-star-button.tsx
apps/web/components/auth/: oauth-buttons.tsx
apps/web/components/effects/: ambient-bg.tsx  cursor-glow.tsx  cursor-trail.tsx  grid-spotlight.tsx  hero-illustration.tsx
apps/web/lib/: api-client.ts
apps/worker/: Dockerfile  package.json
apps/worker/src/: worker.ts
apps/worker/src/ai/: llm.ts  (+3 more)
sdks/python/: pyproject.toml
sdks/python/anythingapi/: __init__.py  client.py  types.py
sdks/typescript/: package.json
sdks/typescript/src/: client.ts  index.ts  types.ts
(+51 files in other folders)
