[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anythingapi"
version = "0.1.0"
description = "Python SDK for API for Anything - turn any website into an API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
